// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileMenuExpandedComponent matches snapshot when isCDO is false 1`] = `
<div
  className="usa-grid-full profile-menu"
>
  <div
    className="menu-title"
  >
    <div
      className="menu-title-text"
    >
      Menu
    </div>
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Collapse menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      expandedSection={
        Object {
          "display": false,
          "title": "",
        }
      }
      hidden={false}
      iconName="user"
      search=""
      title="Profile"
      toggleMenuSection={[Function]}
    >
      <withRouter(NavLink)
        hidden={false}
        link="/profile/dashboard"
        search=""
        title="Dashboard"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/favorites/"
        search=""
        title="Favorites"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/searches/"
        search=""
        title="Saved Searches"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/bidtracker/"
        search=""
        title="Bid Tracker"
      />
      <withRouter(NavLink)
        hidden={true}
        link="/profile/cycles/"
        search=""
        title="Bid Cycles"
      />
      <withRouter(NavLink)
        hidden={true}
        link="/profile/bidderportfolio"
        search="?type=all"
        title="Bidder Portfolio"
      />
    </withRouter(NavLink)>
    <withRouter(NavLink)
      hidden={true}
      iconName="pie-chart"
      link="/profile/statistics"
      search=""
      title="Statistics"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="book"
      link="/profile/glossaryeditor/"
      search=""
      title="Glossary Editor"
    />
  </NavLinksContainer>
</div>
`;

exports[`ProfileMenuExpandedComponent matches snapshot when isCDO is true 1`] = `
<div
  className="usa-grid-full profile-menu"
>
  <div
    className="menu-title"
  >
    <div
      className="menu-title-text"
    >
      Menu
    </div>
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Collapse menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      expandedSection={
        Object {
          "display": false,
          "title": "",
        }
      }
      hidden={false}
      iconName="user"
      search=""
      title="Profile"
      toggleMenuSection={[Function]}
    >
      <withRouter(NavLink)
        hidden={false}
        link="/profile/dashboard"
        search=""
        title="Dashboard"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/favorites/"
        search=""
        title="Favorites"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/searches/"
        search=""
        title="Saved Searches"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/bidtracker/"
        search=""
        title="Bid Tracker"
      />
      <withRouter(NavLink)
        hidden={true}
        link="/profile/cycles/"
        search=""
        title="Bid Cycles"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/bidderportfolio"
        search="?type=all"
        title="Bidder Portfolio"
      />
    </withRouter(NavLink)>
    <withRouter(NavLink)
      hidden={false}
      iconName="pie-chart"
      link="/profile/statistics"
      search=""
      title="Statistics"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="book"
      link="/profile/glossaryeditor/"
      search=""
      title="Glossary Editor"
    />
  </NavLinksContainer>
</div>
`;

exports[`ProfileMenuExpandedComponent matches snapshot when isGlossaryEditor is false 1`] = `
<div
  className="usa-grid-full profile-menu"
>
  <div
    className="menu-title"
  >
    <div
      className="menu-title-text"
    >
      Menu
    </div>
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Collapse menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      expandedSection={
        Object {
          "display": false,
          "title": "",
        }
      }
      hidden={false}
      iconName="user"
      search=""
      title="Profile"
      toggleMenuSection={[Function]}
    >
      <withRouter(NavLink)
        hidden={false}
        link="/profile/dashboard"
        search=""
        title="Dashboard"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/favorites/"
        search=""
        title="Favorites"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/searches/"
        search=""
        title="Saved Searches"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/bidtracker/"
        search=""
        title="Bid Tracker"
      />
      <withRouter(NavLink)
        hidden={true}
        link="/profile/cycles/"
        search=""
        title="Bid Cycles"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/bidderportfolio"
        search="?type=all"
        title="Bidder Portfolio"
      />
    </withRouter(NavLink)>
    <withRouter(NavLink)
      hidden={false}
      iconName="pie-chart"
      link="/profile/statistics"
      search=""
      title="Statistics"
    />
    <withRouter(NavLink)
      hidden={true}
      iconName="book"
      link="/profile/glossaryeditor/"
      search=""
      title="Glossary Editor"
    />
  </NavLinksContainer>
</div>
`;

exports[`ProfileMenuExpandedComponent matches snapshot when user is bidcycle_admin 1`] = `
<div
  className="usa-grid-full profile-menu"
>
  <div
    className="menu-title"
  >
    <div
      className="menu-title-text"
    >
      Menu
    </div>
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Collapse menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      expandedSection={
        Object {
          "display": false,
          "title": "",
        }
      }
      hidden={false}
      iconName="user"
      search=""
      title="Profile"
      toggleMenuSection={[Function]}
    >
      <withRouter(NavLink)
        hidden={false}
        link="/profile/dashboard"
        search=""
        title="Dashboard"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/favorites/"
        search=""
        title="Favorites"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/searches/"
        search=""
        title="Saved Searches"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/bidtracker/"
        search=""
        title="Bid Tracker"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/cycles/"
        search=""
        title="Bid Cycles"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/bidderportfolio"
        search="?type=all"
        title="Bidder Portfolio"
      />
    </withRouter(NavLink)>
    <withRouter(NavLink)
      hidden={false}
      iconName="pie-chart"
      link="/profile/statistics"
      search=""
      title="Statistics"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="book"
      link="/profile/glossaryeditor/"
      search=""
      title="Glossary Editor"
    />
  </NavLinksContainer>
</div>
`;
